[package]
edition = "2021"
name = "twitter-sync-mute-block-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3"
env_logger = "0.8"
juniper = "0.15"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sqlx = {version = "0.5", features = ["runtime-actix-native-tls", "postgres"]}
